fix tor proxy switching for whirlpool client and mixing bip47 utxos